--- a/public/css/elements/index.css
+++ b/public/css/elements/index.css
@@ -6,7 +6,8 @@
   color: antiquewhite;
   border: 2px solid antiquewhite;
   border-radius: 12px;
-  outline: none; }
+  outline: none;
+  cursor: pointer; }
 
 .form__text {
   display: block;
@@ -33,3 +34,22 @@
   border: none;
   border-radius: 0;
   cursor: pointer; }
+
+.error {
+  font-size: 14px;
+  color: #b40000;
+  display: inline-block;
+  margin-left: 24px; }
+
+.register__error-agree {
+  text-align: center;
+  margin-bottom: 24px; }
+
+.login__error-email,
+.login__error-password,
+.register__error-username,
+.register__error-email,
+.register__error-password,
+.register__error-match,
+.register__error-agree {
+  display: none; }
