--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -9,6 +9,7 @@
 
   &__nav {
     padding-top: 22px;
+    flex-grow: 0;
   }
 
   &__login {
@@ -60,13 +61,17 @@
 
     &-item {
       display: inline-block;
-      margin-right: 24px;
       font-size: 20px;
       color: white;
     }
 
     &-link {
       text-decoration: none;
+      margin-right: 24px;
+    }
+
+    &-link:last-child {
+      margin-right: 0;
     }
   }
 }
@@ -96,6 +101,16 @@
 }
 
 .modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.2);
 
   &__content {
     position: relative;
@@ -173,4 +188,13 @@
 
 .visible {
   display: inline-block;
+}
+
+.user {
+
+  &__name {
+    display: inline-block;
+    color: antiquewhite;
+    margin-right: 16px;
+  }
 }
