--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -7,6 +7,10 @@
     padding-top: 16px;
   }
 
+  &__logo {
+    text-decoration: none;
+  }
+
   &__nav {
     padding-top: 22px;
     flex-grow: 0;
@@ -196,5 +200,6 @@
     display: inline-block;
     color: antiquewhite;
     margin-right: 16px;
+    text-decoration: none;
   }
 }
