--- a/assets/scss/elements/_form-error.scss
+++ b/assets/scss/elements/_form-error.scss
@@ -13,7 +13,9 @@
 .login__error-email,
 .login__error-password,
 .register__error-username,
+.register__error-username-short,
 .register__error-email,
+.register__error-email-short,
 .register__error-password,
 .register__error-match,
 .register__error-agree {
