--- a/public/css/app.css
+++ b/public/css/app.css
@@ -86,7 +86,9 @@ table {
 .login__error-email,
 .login__error-password,
 .register__error-username,
+.register__error-username-short,
 .register__error-email,
+.register__error-email-short,
 .register__error-password,
 .register__error-match,
 .register__error-agree {
