--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -5,19 +5,30 @@
     justify-content: space-around; 
     background-color: #46ACC2;
     padding-top: 16px;
+
+    @include respond-to("handhelds") {
+      display: block;
+      padding-bottom: 8px;
+    }
   }
 
   &__logo {
     text-decoration: none;
+    text-align: center;
   }
 
   &__nav {
     padding-top: 22px;
     flex-grow: 0;
+
+    @include respond-to(handhelds) {
+      padding-top: 8px;
+    }
   }
 
   &__login {
     padding-top: 12px;
+
   }
 
   &__modal {
@@ -35,6 +46,7 @@
 
   &__user {
     display: none;
+    text-align: center;
   }
 }
 
@@ -72,11 +84,36 @@
     &-link {
       text-decoration: none;
       margin-right: 24px;
+
+      @include respond-to(handhelds) {
+        margin-right: auto;
+        margin-left: auto;
+        padding: 8px 16px;
+        width: 100%;
+        box-sizing: border-box;
+      }
     }
 
     &-link:last-child {
       margin-right: 0;
+
+      @include respond-to(handhelds) {
+        margin-right: auto;
+      }
     }
+  }
+
+  &__list.responsive .nav__list-link {
+
+    @include respond-to(handhelds) {
+      float: none;
+      display: block;
+      text-align: center;
+    }
+  }
+
+  &__menu {
+    display: none;
   }
 }
 
@@ -85,6 +122,11 @@
   &__button {
     outline: none;
     display: none;
+
+    @include respond-to(handhelds) {
+      display: block;
+      margin: 0 auto;
+    }
   }
 
   &__button:hover {
@@ -124,6 +166,11 @@
     padding-top: 32px;
     border: 1px solid #888;
     width: 50%;
+
+    @include respond-to(handhelds) {
+      padding: 8px 16px;
+      width: 80%;
+    }
   }
 
   &__close {
@@ -201,5 +248,22 @@
     color: antiquewhite;
     margin-right: 16px;
     text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .nav__list-link {
+    display: none;
+  }
+
+  .nav__menu {
+    display: block;
+    text-align: center;
+  }
+
+  .nav__list.responsive .nav__list-link {
+    float: none;
+    display: block;
+    text-align: center;
   }
 }
