--- a/assets/scss/elements/_form-text.scss
+++ b/assets/scss/elements/_form-text.scss
@@ -4,7 +4,8 @@
     padding: 8px 16px;
     margin-bottom: 16px;
     border: none;
-    border-bottom: 1px dashed #666666;    
+    border-bottom: 1px dashed #666666;
+    box-sizing: border-box;
     outline: none;
     font-family: "palanquindark-regular";
     font-size: 14px;
