--- a/assets/scss/components/_account.scss
+++ b/assets/scss/components/_account.scss
@@ -58,3 +58,35 @@
   border-radius: 8px;
   padding: 0px 16px;;
 }
+
+.ensure {
+  
+  &__modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  &__message {
+    display: block;
+    margin-bottom: 16px;
+    text-align: center;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+.remove__button,
+.leave__button {
+  display: inline-block;
+}
