--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,6 +57,7 @@ table {
   margin-bottom: 16px;
   border: none;
   border-bottom: 1px dashed #666666;
+  box-sizing: border-box;
   outline: none;
   font-family: "palanquindark-regular";
   font-size: 14px;
@@ -174,6 +175,9 @@ table {
       padding: 8px 16px;
       width: 100%;
       box-sizing: border-box; } }
+
+.nav__list-link:hover {
+  border-bottom: 1px solid antiquewhite; }
 
 .nav__list-link:last-child {
   margin-right: 0; }
@@ -391,6 +395,31 @@ table {
   border-radius: 8px;
   padding: 0px 16px; }
 
+.ensure__modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+.ensure__message {
+  display: block;
+  margin-bottom: 16px;
+  text-align: center; }
+
+.ensure__container {
+  display: flex;
+  justify-content: space-around; }
+
+.remove__button,
+.leave__button {
+  display: inline-block; }
+
 .promo {
   width: 100%;
   background: url("../../public/img/promo.jpg") no-repeat center center;
@@ -470,6 +499,10 @@ table {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; }
+  @media only screen and (max-width: 480px) {
+    .footer {
+      justify-content: space-between;
+      padding: 8px 16px; } }
   .footer__nav-link {
     display: block;
     text-decoration: none;
