--- a/assets/scss/components/_account.scss
+++ b/assets/scss/components/_account.scss
@@ -98,3 +98,21 @@
 .leave__button {
   display: inline-block;
 }
+
+.make-reservation {
+
+  &__button {
+    margin-bottom: 16px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &__message {
+    display: block;
+    text-align: center;
+    margin-bottom: 16px;
+    font-size: 14px;
+    color: #666666;
+  }  
+}
