--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -8,9 +8,13 @@
 
   @include respond-to(medium-screens) {
     width: 100%;
+    border-left: none;
+    border-top: 5px solid lightblue;
   }
   @include respond-to(handhelds) {
     width: 100%;
+    border-left: none;
+    border-top: 5px solid lightblue;
   }
 
   &__heading {
