--- a/public/css/app.css
+++ b/public/css/app.css
@@ -315,10 +315,14 @@ table {
   border-left: 5px solid lightblue; }
   @media only screen and (min-width: 481px) and (max-width: 1023px) {
     .sidebar {
-      width: 100%; } }
+      width: 100%;
+      border-left: none;
+      border-top: 5px solid lightblue; } }
   @media only screen and (max-width: 480px) {
     .sidebar {
-      width: 100%; } }
+      width: 100%;
+      border-left: none;
+      border-top: 5px solid lightblue; } }
   .sidebar__heading {
     text-align: center;
     margin-bottom: 24px;
@@ -426,6 +430,19 @@ table {
 .remove__button,
 .leave__button {
   display: inline-block; }
+
+.make-reservation__button {
+  margin-bottom: 16px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+.make-reservation__message {
+  display: block;
+  text-align: center;
+  margin-bottom: 16px;
+  font-size: 14px;
+  color: #666666; }
 
 .promo {
   width: 100%;
