--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   width: 40%;
   padding: 16px;
-  padding-bottom: 0;
   background-color:	lightsteelblue;
   border-left: 5px solid lightblue;
 
@@ -32,6 +31,10 @@
       display: block;
     }
   }
+
+  &__service:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .service {
@@ -56,5 +59,17 @@
   &__item {
     max-width: 280px;
     border-radius: 16px;
-  }
+
+    @include respond-to(medium-screens) {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  
+    @include respond-to(handhelds) {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }  
 }
