repaired login through email + other fixes

--- a/assets/scss/components/_promo.scss
+++ b/assets/scss/components/_promo.scss
@@ -35,12 +35,12 @@
   &__button {
     display: block;
     margin: 0 auto;
-    width: 20%;
+    max-width: 50%;
     background-color: lightsteelblue;
     color: black;
 
     @include respond-to(handhelds) {
-      width: 50%;
+      max-width: 80%;
     }
   }
 
