Fix bug when you can choose every date if you type it manually

--- a/assets/scss/elements/_form-error.scss
+++ b/assets/scss/elements/_form-error.scss
@@ -22,7 +22,8 @@
 .register__error-password,
 .register__error-match,
 .register__error-agree,
-.reserve__fill-error {
+.reserve__fill-error,
+.reserve__date-error {
   display: none;
   text-align: center;
 }
